--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    height: 100%;
+}
+
+.bg {
+    background-image: url("assets/calpoly.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    min-height: 100%;
+    min-width: 1024px;
+
+    width: 100%;
+    height: auto;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+@media screen and (max-width: 1024px) {
+    .bg {
+        left: 50%;
+        margin-left: -512px;
+    }
+}
