--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,3 +24,18 @@ body {
         margin-left: -512px;
     }
 }
+
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+// body {
+//   font-family: Roboto, Arial, sans-serif;
+//   margin: 0;
+// }
+// .basic-container {
+//   padding: 30px;
+// }
+// .version-info {
+//   font-size: 8pt;
+//   float: right;
+//   margin: 8px;
+// }
